metadata-objects/extracted/unpackaged/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>AccountCode__c</fullName>
        <label>Cod. Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <label>Cuenta Bancaria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessName__c</fullName>
        <label>Razón Social</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryAddress__c</fullName>
        <label>Dirección Entrega</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryNote__c</fullName>
        <label>Albarán A3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacturaOriginal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factura Original</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas_Rectificativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FreightOder__c</fullName>
        <label>Orden de Carga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRPF__c</fullName>
        <label>IRPF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <label>IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factura enviada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <label>Fecha de emisión</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Fecha de cobro</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Forma de pago</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentIRPF__c</fullName>
        <label>% IRPF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentIVA__c</fullName>
        <label>% IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentRequiv__c</fullName>
        <label>% R.equiv.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requiv__c</fullName>
        <label>R.equiv.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente de Cobro</fullName>
                    <default>true</default>
                    <label>Pendiente de Cobro</label>
                </value>
                <value>
                    <fullName>Cobrada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Almacén de Carga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierDeliveryNote__c</fullName>
        <label>Albarán del Proveedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxBase__c</fullName>
        <label>Base imponible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total factura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Empresa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENERGÍA</fullName>
                </value>
                <value>
                    <fullName>SUMINISTRO</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUCIÓN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Factura</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Order__c</columns>
        <columns>PaymentDate__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
    </listViews>
    <listViews>
        <fullName>Cobradas</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CIF__c</columns>
        <columns>Account__c</columns>
        <columns>Order__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>PaymentDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cobrada</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DISTRIBUCIÓN</value>
        </filters>
        <label>Cobradas Distribución</label>
    </listViews>
    <listViews>
        <fullName>Cobradas_Energia</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CIF__c</columns>
        <columns>Account__c</columns>
        <columns>Order__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>PaymentDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cobrada</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DISTRIBUCIÓN</value>
        </filters>
        <label>Cobradas Energía</label>
    </listViews>
    <listViews>
        <fullName>Cobradas_Suministro</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CIF__c</columns>
        <columns>Account__c</columns>
        <columns>Order__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>PaymentDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cobrada</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SUMINISTRO</value>
        </filters>
        <label>Cobradas Suministro</label>
    </listViews>
    <listViews>
        <fullName>Pendiente_de_Cobro</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>CIF__c</columns>
        <columns>Order__c</columns>
        <columns>IssueDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pendiente de Cobro</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DISTRIBUCIÓN</value>
        </filters>
        <label>Pendientes de Cobro Distribución</label>
    </listViews>
    <listViews>
        <fullName>Pendientes_de_Cobro_Energia</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>CIF__c</columns>
        <columns>Order__c</columns>
        <columns>IssueDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pendiente de Cobro</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ENERGÍA</value>
        </filters>
        <label>Pendientes de Cobro Energía</label>
    </listViews>
    <listViews>
        <fullName>Pendientes_de_Cobro_Suministro</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>CIF__c</columns>
        <columns>Order__c</columns>
        <columns>IssueDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pendiente de Cobro</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SUMINISTRO</value>
        </filters>
        <label>Pendientes de Cobro Suministro</label>
    </listViews>
    <nameField>
        <label>Número de Factura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <recordTypes>
        <fullName>Correctora</fullName>
        <active>true</active>
        <description>Factura correctora que anula la factura original</description>
        <label>Correctora</label>
    </recordTypes>
    <recordTypes>
        <fullName>Original</fullName>
        <active>true</active>
        <description>Factura original emitida</description>
        <label>Original</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rectificada</fullName>
        <active>true</active>
        <description>Factura rectificada con los valores corregidos</description>
        <label>Rectificada</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>